create endpoint for geting all links, add links display method on frontend
