# api/public/docs/api.yml
@@ -215,6 +215,39 @@ paths:
         "500":
           description: Server Error
           content: {}
+  /{id}/my-links:
+    get:
+      summary: Get my Links
+      tags:
+        - Link
+      parameters:
+        - name: id
+          in: path
+          example: 1
+          description: The id of the user that own the links
+          required: true
+          schema:
+            type: string
+        - name: token
+          in: header
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Im1pY2hhZWxuZ2lyaUBnbWFpbC5jb20iLCJkYXRlQ3JlYXRlZCI6IjIwMjItMDgtMjNUMTk6MjY6MzIuMTA2WiIsImlhdCI6MTY2MTI4Mjc5Mn0.F0LfQGuV4mTngIKimqtHkHOdJG86Ut-bxR_3dE-7H9s
+          description: Authentication token
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Link found
+          content: {}
+        "400":
+          description: Bad request
+          content: {}
+        "404":
+          description: Link does not exist
+          content: {}
+        "500":
+          description: Server Error
+          content: {}
 
 schemas:
   SaveUser:
